CH8/alpaca-prod-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alpaca-prod
  namespace: kuard
  labels:
    app: alpaca
    env: prod
    ver: "1"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: alpaca
      env: prod
      ver: "1"
  template:
    metadata:
      labels:
        app: alpaca
        env: prod
        ver: "1"
    spec:
      containers:
      - image: gcr.io/kuar-demo/kuard-amd64:green
        name: kuard
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /ready
            port: 8080
          periodSeconds: 2
          initialDelaySeconds: 0
          failureThreshold: 3
          successThreshold: 1
