CH8/banidcoot-prod-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bandicoot-prod
  namespace: kuard
  labels:
    app: bandicoot
    env: prod
    ver: "1"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: bandicoot
      env: prod
      ver: "2"
  template:
    metadata:
      labels:
        app: bandicoot
        env: prod
        ver: "2"
    spec:
      containers:
      - image: gcr.io/kuar-demo/kuard-amd64:purple
        name: kuard
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
