CH8/be-default.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: be-default 
  namespace: kuard
  labels:
    app: be-default
    env: prod
    ver: "2"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: be-default
      env: prod
      ver: "2"
  template:
    metadata:
      labels:
        app: be-default
        env: prod
        ver: "2"
    spec:
      containers:
      - image: gcr.io/kuar-demo/kuard-amd64:blue
        name: kuard
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
