CH8/path-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: path-ingress
spec:
  rules:
  - host: bandicoot.example.com #have to change to something not .dev because of HSTS. Made this work by host file entry. Serving up correctly.        
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: bandicoot-prod
            port:
              number: 8080
      - path: "/a/"
        pathType: Prefix
        backend:
          service:
            name: alpaca-prod
            port:
              number: 8080
