CH8/simple-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-ingress
spec:
  backend:
    serviceName: alpaca-prod
    servicePort: 8080
