CH8/tls-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tls-ingress
spec:
  tls:
  - hosts:
    - alpaca.fluster.dcache.dev
    secretName: star-dcache-tls      
  rules:
  - host: alpaca.fluster.dcache.dev #have to change to something not .dev because of HSTS. Made this work by host file entry. Serving up correctly.        
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: alpaca-prod
            port:
              number: 8080
